--- a/CSS/html2.css
+++ b/CSS/html2.css
@@ -1,5 +1,5 @@
 body{
-    background-image:url(../Images/image.jpg) ;
+    background-image:url(Images/image.jpg) ;
     background-size: 100%;
 }
 h2{
